; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_profile_prvd.c_profile_detach.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_profile_prvd.c_profile_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DDI_SUCCESS = common dso_local global i32 0, align 4
@DDI_FAILURE = common dso_local global i32 0, align 4
@profile_id = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @profile_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @profile_detach(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %10 [
    i32 129, label %7
    i32 128, label %8
  ]

7:                                                ; preds = %2
  br label %12

8:                                                ; preds = %2
  %9 = load i32, i32* @DDI_SUCCESS, align 4
  store i32 %9, i32* %3, align 4
  br label %22

10:                                               ; preds = %2
  %11 = load i32, i32* @DDI_FAILURE, align 4
  store i32 %11, i32* %3, align 4
  br label %22

12:                                               ; preds = %7
  %13 = load i32, i32* @profile_id, align 4
  %14 = call i64 @dtrace_unregister(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %12
  %17 = load i32, i32* @DDI_FAILURE, align 4
  store i32 %17, i32* %3, align 4
  br label %22

18:                                               ; preds = %12
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @ddi_remove_minor_node(i32* %19, i32* null)
  %21 = load i32, i32* @DDI_SUCCESS, align 4
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %18, %16, %10, %8
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i64 @dtrace_unregister(i32) #1

declare dso_local i32 @ddi_remove_minor_node(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
